--- a/spring-camunda/build.gradle
+++ b/spring-camunda/build.gradle
@@ -22,6 +22,7 @@ dependencies {
   compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
 
   compile 'org.camunda.bpm:camunda-engine-spring:7.3.0'
+  providedCompile 'org.camunda.bpm:camunda-engine:7.3.0'
   
   providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
 
