--- a/camunda-spring-annotation-config/build.gradle
+++ b/camunda-spring-annotation-config/build.gradle
@@ -12,19 +12,23 @@ dependencies {
   compile 'org.springframework:spring-web:4.1.1.RELEASE'
   compile 'org.springframework:spring-orm:4.0.6.RELEASE'
   compile 'org.springframework:spring-webmvc:4.0.6.RELEASE'
-  compile 'org.springframework:spring-context-support:4.0.6.RELEASE'
-  compile 'org.springframework.ws:spring-ws-core:2.1.4.RELEASE'
-  compile 'org.springframework.data:spring-data-jpa:1.6.2.RELEASE'
+  compile 'org.springframework:spring-beans:4.1.1.RELEASE'
+  
+
+
+
   compile 'org.springframework.data:spring-data-rest-webmvc:2.2.0.RELEASE'
   compile 'org.springframework.security:spring-security-web:3.2.5.RELEASE'
-  compile 'org.springframework.security:spring-security-config:3.2.5.RELEASE'
-  compile 'org.springframework:spring-test:2.5'
-  compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
 
+
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
+  
   compile 'org.camunda.bpm:camunda-engine-spring:7.3.0'
   providedCompile 'org.camunda.bpm:camunda-engine:7.3.0'
   
   providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+  providedCompile 'org.apache.tomcat:tomcat-jdbc:7.0.19'
+  
 
 
 
