Camunda 7.10.0 spring boot with gradle

--- a/standard-spring-boot/build.gradle
+++ b/standard-spring-boot/build.gradle
@@ -20,14 +20,10 @@ repositories {
 }
 
 dependencies {
-	compile (group: 'org.camunda.bpm.springboot', name: 'camunda-bpm-spring-boot-starter', version: '3.0.0'){
-		exclude module: 'spring-tx'
-	}
-	
-	compile group: 'org.springframework', name: 'spring-tx', version: '5.0.6.RELEASE'
-	
-	compile group: 'org.camunda.bpm.springboot', name: 'camunda-bpm-spring-boot-starter-webapp', version: '3.0.0'
-	compile group: 'org.camunda.bpm.springboot', name: 'camunda-bpm-spring-boot-starter-rest', version: '3.0.0'
-	
+    compile (group: 'org.camunda.bpm.springboot', name: 'camunda-bpm-spring-boot-starter', version: '3.2.0')
+	compile group: 'org.camunda.bpm.springboot', name: 'camunda-bpm-spring-boot-starter-webapp', version: '3.2.0'
+	compile group: 'org.camunda.bpm.springboot', name: 'camunda-bpm-spring-boot-starter-rest', version: '3.2.0'
+
+    compile group: 'org.springframework', name: 'spring-tx', version: '5.0.6.RELEASE'
 	compile group: 'com.h2database', name: 'h2', version: '1.4.196'
 }
