--- a/tenants/src/main/resources/application.yaml
+++ b/tenants/src/main/resources/application.yaml
@@ -11,6 +11,9 @@ spring:
     password: 
     url: jdbc:h2:file:./camunda-h2-database
 
-camunda.bpm.admin-user:
-  id: demo
-  password: demo
+camunda.bpm:
+  admin-user:
+    id: demo
+    password: demo
+  auto-deployment-enabled: false
+  
